# polls

./: Makefile  README.md  pollsource.cabal  stack.yaml
app/: Main.hs
src/PollSource/: Auth.hs  Commands.hs  Handlers.hs  Ids.hs  Prelude.hs  Queries.hs  Routes.hs  Server.hs  Streams.hs  Time.hs  Types.hs
src/PollSource/Projections/: FullPoll.hs
test/: Spec.hs
