name:                pollsource
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pollsource#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     PollSource.Auth
                     , PollSource.Commands
                     , PollSource.Handlers
                     , PollSource.Ids
                     , PollSource.Prelude
                     , PollSource.Projections.FullPoll
                     , PollSource.Queries
                     , PollSource.Routes
                     , PollSource.Server
                     , PollSource.Streams
                     , PollSource.Time
                     , PollSource.Types
  build-depends:       aeson
                     , base
                     , cereal
                     , cereal-text
                     , containers
                     , cookie
                     , cryptonite
                     , dispenser-core
                     , dispenser-server
                     , foldl
                     , http-api-data
                     , http-types
                     , lens
                     , optparse-applicative
                     , protolude
                     , safe
                     , servant
                     , servant-js
                     , servant-ruby
                     , servant-server
                     , streaming
                     , time
                     , uuid
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable pollsource
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base
                     , cereal
                     , cereal-text
                     , containers
                     , cookie
                     , cryptonite
                     , dispenser-core
                     , dispenser-server
                     , foldl
                     , http-api-data
                     , http-types
                     , lens
                     , optparse-applicative
                     , pollsource
                     , protolude
                     , safe
                     , servant
                     , servant-js
                     , servant-ruby
                     , servant-server
                     , streaming
                     , time
                     , uuid
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

test-suite pollsource-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       aeson
                     , base
                     , cereal
                     , cereal-text
                     , containers
                     , cryptonite
                     , dispenser-core
                     , dispenser-server
                     , foldl
                     , http-api-data
                     , http-types
                     , lens
                     , optparse-applicative
                     , pollsource
                     , protolude
                     , safe
                     , servant
                     , servant-auth-cookie
                     , servant-js
                     , servant-ruby
                     , servant-server
                     , streaming
                     , time
                     , uuid
                     , wai
                     , wai-extra
                     , warp
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pollsource
